# UAIS-2022-Hex-Bot

./: .gitignore  README.md  main.ipynb
Communication/: Play.py
Test/: bot_test.py
central_program/: Cargo.toml  README.md  test.sh
central_program/src/: board.rs  central_controller.rs  display_interface.rs  main.rs  testing.rs
central_program/tests/: test.rs  testing.rs
random_bot/: README.md  bot.py  constants.py  main.py  test.gtp  tests.py  unittests.py
training_data/: README.md  game_data.txt
